# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
#
# Copyright 2017 Shusheng Shao <iblackangel@163.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

include_HEADERS =				\
mini.h    

minidir = $(includedir)/mini

mini_HEADERS =					\
mini/mhttp.h					\
mini/mglobal.h					\
mini/msettings.h				\
mini/mthread.h					\
mini/mlog.h					\
mini/mxml.h					\
mini/mfileinfo.h				\
mini/mstring.h					\
mini/mmongodb.h					\
mini/mapplication.h				\
mini/mfile.h					\
mini/mcoredef.h					\
mini/mdir.h					\
mini/msocket.h					\
mini/mrand.h					\
mini/mcommandline.h				\
mini/mcondition.h				\
mini/mdatetime.h				\
mini/msysinfo.h					\
mini/mmutex.h					\
mini/mhostaddress.h				\
mini/mprocess.h					\
mini/mjson.h					\
mini/merror.h					\
mini/muuid.h					\
mini/mhash.h
