# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
#
# Copyright 2017 Shusheng Shao <iblackangel@163.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

include_HEADERS =				\
minion.h    

miniondir = $(includedir)/minion

minion_HEADERS =				\
minion/mhttp.h					\
minion/mglobal.h				\
minion/msettings.h				\
minion/msettings_p.h				\
minion/msettings_utf.h				\
minion/mthread.h				\
minion/mlog.h					\
minion/mxml.h					\
minion/mfileinfo.h				\
minion/mstring.h				\
minion/mmongodb.h				\
minion/mapplication.h				\
minion/mfile.h					\
minion/mcoredef.h				\
minion/mdir.h					\
minion/msocket.h				\
minion/mrand.h					\
minion/mcommandline.h				\
minion/mcondition.h				\
minion/mdatetime.h				\
minion/msysinfo.h				\
minion/mmutex.h					\
minion/mhostaddress.h				\
minion/mprocess.h				\
minion/mjson.h					\
minion/merror.h					\
minion/murl.h					\
minion/muuid.h					\
minion/mhash.h					\
minion/mqueue.h					\
minion/mthreadpool.h 


