# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
#
# Copyright 2017 Shusheng Shao <iblackangel@163.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

include_HEADERS =				\
mpl.h    

mpldir = $(includedir)/mpl

mpl_HEADERS =					\
mpl/mhttp.h					\
mpl/mglobal.h					\
mpl/msettings.h					\
mpl/msettings_p.h				\
mpl/msettings_utf.h				\
mpl/mthread.h					\
mpl/mlog.h					\
mpl/mxml.h					\
mpl/mfileinfo.h					\
mpl/mstring.h					\
mpl/mmongodb.h					\
mpl/mapplication.h				\
mpl/mfile.h					\
mpl/mcoredef.h					\
mpl/mdir.h					\
mpl/msocket.h					\
mpl/mrand.h					\
mpl/moptions.h					\
mpl/mcondition.h				\
mpl/mdatetime.h					\
mpl/mdatahandler.h				\
mpl/msysinfo.h					\
mpl/mmutex.h					\
mpl/mhostaddress.h				\
mpl/mprocess.h					\
mpl/mjson.h					\
mpl/merror.h					\
mpl/murl.h					\
mpl/muuid.h					\
mpl/mhash.h					\
mpl/mqueue.h					\
mpl/mthreadpool.h				\
mpl/mevent.h
