lib_LTLIBRARIES = libmini.la

# library version
libmini_la_LDFLAGS=$(LTLDFLAGS)

libmini_la_CPPFLAGS = -I$(top_srcdir)/include $(all_includes)
######################################
# Cflags and Libs
# libmini_la_CXXFLAGS = $(LIBICONV_CFLAGS)
libmini_la_LIBADD = -lpthread

libmini_la_SOURCES =				\
mapplication.cpp				\
mcommandline.cpp				\
mdatetime.cpp					\
mdir.cpp					\
mfile.cpp					\
mfileinfo.cpp					\
mglobal.cpp					\
mhostaddress.cpp				\
mhttp.cpp					\
mjson.cpp					\
mlog.cpp					\
mmongodb.cpp					\
mprocess.cpp					\
mrand.cpp					\
msettings.cpp					\
msocket.cpp					\
mstring.cpp					\
msysinfo.cpp					\
mthread.cpp					\
mcondition.cpp					\
mxml.cpp					\
merror.cpp					\
muuid.cpp					\
muuid_p.h					\
muuid_unix.cpp					\
mhash.cpp					\
mhash_md5.h					\
mhash_md5.c
