lib_LTLIBRARIES = libminion.la

# library version
libminion_la_LDFLAGS=$(LTLDFLAGS)

libminion_la_CPPFLAGS = -I$(top_srcdir)/include $(all_includes)
######################################
# Cflags and Libs
# libminion_la_CXXFLAGS = $(LIBICONV_CFLAGS)
libminion_la_LIBADD = -lpthread

libminion_la_SOURCES =				\
mapplication.cpp				\
moptions.cpp					\
mdatetime.cpp					\
mdir.cpp					\
mfile.cpp					\
mfileinfo.cpp					\
mglobal.cpp					\
mhostaddress.cpp				\
mhttp.cpp					\
mjson.cpp					\
mlog.cpp					\
mmongodb.cpp					\
mprocess.cpp					\
mrand.cpp					\
msettings.cpp					\
msocket.cpp					\
mstring.cpp					\
msysinfo.cpp					\
mthread.cpp					\
mcondition.cpp					\
mxml.cpp					\
merror.cpp					\
muuid.cpp					\
murl.cpp					\
muuid_p.h					\
muuid_unix.cpp					\
mhash.cpp					\
mhash_md5.h					\
mhash_md5.c					\
msettings_utf.c				
